--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ test:
     - rake cucumber:
         pwd:
           roomie
-  post:
-    - rails_best_practices:
-        pwd:
-          roomie
+#  post:
+#    - rails_best_practices:
+#        pwd:
+#          roomie
